[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/swordandgun/CowboyExtra.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/foresight_tp.png" type="Texture" id=4]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/foresight_explode.png" type="Texture" id=5]

[node name="PlayerExtra" instance=ExtResource( 1 )]
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 64.0
margin_bottom = 360.0
alignment = 1

[node name="ShootButton" type="CheckButton" parent="VBoxContainer" index="0"]
unique_name_in_owner = true
margin_top = 156.0
margin_right = 64.0
margin_bottom = 168.0
size_flags_vertical = 0
text = "Draw"

[node name="TpButton" type="CheckButton" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 169.0
margin_right = 64.0
margin_bottom = 186.0
size_flags_vertical = 0
text = "Shift"
icon = ExtResource( 4 )

[node name="DetonateButton" type="CheckButton" parent="VBoxContainer" index="2"]
unique_name_in_owner = true
margin_top = 187.0
margin_right = 64.0
margin_bottom = 204.0
size_flags_vertical = 0
text = "Rift"
icon = ExtResource( 5 )

[connection signal="toggled" from="VBoxContainer/TpButton" to="." method="_on_TpButton_toggled"]
[connection signal="toggled" from="VBoxContainer/DetonateButton" to="." method="_on_DetonateButton_toggled"]
